k8s/apps/backend/overlays/prod/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utterai-api-blue
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: api
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp
          mountPath: "/tmp"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utterai-api-green
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: api
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp
          mountPath: "/tmp"
