k8s/apps/backend/overlays/prod/patch-active-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: utterai-api-service
spec:
  selector:
    app: utterai-api
    color: blue
